@@ -3,6 +3,7 @@
 	- fix: with --target=i686, pass macro %_arch=i386.
 	- fix: rpm --target=arch ... resurrected.
 	- fix: rpm -q --specfile --specedit now works even with BuildArch:.
+	- fix: recursive strtok's is a no-no.
 
 2.90 -> 2.91
 	- fix: memory leaks in rpmRunTransactions plugged.
